<resources>
    <string name="app_name">Online Shop</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_user">Такого пользователя не существует.</string>
    <string name="user_exists">Такой пользователь уже существует</string>
    <string name="not_all_fields_are_filled_in">Не все поля заполнены.</string>
    <string name="text_entered_is_not_email">Введенный текст не является email</string>
    <string name="raiting_text">3.9</string>
    <string name="reviews_count">(4000 reviews)</string>
    <string name="color_text">Color:</string>
    <string name="description">Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked</string>
    <string name="product_name">New balance Sneakers</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="quantity">Quantity:</string>
    <string name="discount_text">30% off</string>
    <string name="price_text">$ 33,00</string>
    <string name="flash_product_name">New balance sneakers</string>
    <string name="flash_category_text">Kids</string>
    <string name="home_screen_title">Trade by bata</string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="latest_price_text">$ 180,000</string>
    <string name="latext_name">Samsung S10</string>
    <string name="latest_category">Phones</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="satira_adhi_pradana">Satira Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance_text">$1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="balance">Balance</string>
    <string name="item_icon">item_icon</string>
</resources>