<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="107dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/hint_first_name"
        android:textSize="11sp" />


    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:textSize="11sp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_password" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="289dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginTop="35dp"
        android:layout_height="46dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button_text" />


</LinearLayout>
