<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="107dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/hint_first_name"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/hint_last_name"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textSize="11sp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_email" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="289dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:layout_height="46dp"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="10sp"
            android:text="@string/already_have_an_account"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="152dp"
        android:layout_height="24dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/sign_in_with_google" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="152dp"
        android:layout_marginTop="38dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apple_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:paddingStart="16dp"
            android:text="@string/sign_in_with_apple" />

    </LinearLayout>

</LinearLayout>
