<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/hint_first_name"
        android:textSize="11sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="289dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingTop="0dp"
            android:textSize="11sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/log_in_button"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login_button_text"
        android:textAllCaps="false" />


</LinearLayout>
